feat: Integrate DOMPurify for email HTML sanitization
- Added isomorphic-dompurify to sanitize HTML content in email templates, preventing XSS attacks.
- Implemented a sanitizeEmailHTML function to allow safe HTML elements and attributes while stripping dangerous ones.
- Updated email component rendering to use sanitized HTML, enhancing security and compliance with best practices.

This update improves the security of email content handling in the application.

--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "globals": "^15.15.0",
     "googleapis": "^144.0.0",
+    "isomorphic-dompurify": "^2.25.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
     "motion": "^12.9.2",
