fix: Update security audit command in CI workflow
- Changed the command from 'bun pm audit' to 'bun audit' in the GitHub Actions workflow to align with the latest Bun package management practices.
- Ensured that the security audit continues to report vulnerabilities while allowing the workflow to proceed even if issues are found.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -364,7 +364,7 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: 🔒 Run security audit
-        run: bun pm audit || echo "⚠️ Security vulnerabilities found - please review and update dependencies"
+        run: bun audit || echo "⚠️ Security vulnerabilities found - please review and update dependencies"
         continue-on-error: true
 
       - name: 🔍 Initialize CodeQL
